adminer/adminer-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adminer
  labels:
    app.kubernetes.io/name: adminer
    app.kubernetes.io/managed-by: kubectl
