adminer/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: adminer
  labels:
    app.kubernetes.io/name: adminer
    app.kubernetes.io/component: management
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: adminer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adminer
        app.kubernetes.io/component: management
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - image: adminer:latest
          name: adminer
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
