adminer/adminer-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adminer
  namespace: adminer
  labels:
    app.kubernetes.io/name: adminer
    app.kubernetes.io/component: management
    app.kubernetes.io/managed-by: kubectl
spec:
  serviceName: adminer
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: adminer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adminer
        app.kubernetes.io/component: management
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - image: adminer:latest
          name: adminer
          ports:
            - containerPort: 8080
