adminer/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: adminer
  labels:
    app.kubernetes.io/name: adminer
    app.kubernetes.io/component: management
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: adminer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
